Opened 12 years ago
Closed 12 years ago
#3543 closed defect (fixed)
Export Wav from Quicktime Error
| Reported by: | speedyrazor | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | wav |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug: If you have a quicktime mov with audio as a stereo pair and is assigned as Left Total Right Total, export wav audio with ffmpeg produces a wav which wont play in Quicktime or Final Cut.
How to reproduce: If you have a quicktime mov with video and audio, the audio is a stereo pair and is assigned as Left Total Right Total. To assign audio open the quicktime mov in quicktime pro, 'Show Movie Properties', select Sound Track, 'Audio Settings', 'Assignment', use drop-down to select 'Left total' 'Right Total'. Using the command below produces a 24 Bit wav which wont play or open in Quicktime or Final Cut. If you create a 16 Bit wav then it plays fine.
% ffmpeg -i test.mov -map 0:1 -acodec pcm_s24le LEFT_RIGHT_Total.wav ffmpeg version 2.2-tessus Copyright (c) 2000-2014 the FFmpeg developers built on Mar 24 2014 22:25:11 with llvm-gcc 4.2.1 (LLVM build 2336.1.00)
Change History (2)
comment:1 by , 12 years ago
| Component: | ffmpeg → avformat |
|---|---|
| Keywords: | wav added; ffmpeg audio quicktime removed |
| Version: | unspecified → git-master |
comment:2 by , 12 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Both WMP and QT fail to decode wav files with channel masks >= 0x40000
This should be fixed since bf87d582 - FFmpeg-specific channel layouts can still be written with -strict -1.
Please understand that if I had not read your forum report (which I found difficult to understand but at least complete) before reading this ticket, I would have had no chance to understand what this is about. Please ask questions on the ffmpeg-user mailing list, report bugs (including command line and complete, uncut console output) here in a way so that no additional research is necessary to reproduce them.



See ticket #3542 for a better explanation for your real problem, feel free to upload your original sample.
I am not sure if FFmpeg by default should not write wav files with unspecified channel layouts. Did you test with WMP?