Do not allow writing invalid wav channel layouts by default.

Neither WMP nor QT play wav files with too large channel layouts.
Fixes ticket #3543.